# project-management-api

./: .env.example  Procfile  middlewares.py  pyproject.toml  render.yaml
accounts/: serializers.py  urls.py  views.py
accounts/templates/: forgot_password.html  test_notification.html
app/: models.py  routing.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_refreshtoken_agent_refreshtoken_location_room_owner_and_more.py  0002_remove_task_assignee_notification_scheduled_time_and_more.py  0003_alter_comment_id_alter_message_id_and_more.py  0003_projectdocument.py  0004_alter_comment_id_alter_message_id_and_more.py  0004_alter_projectdocument_content.py  0005_alter_comment_id_alter_message_id_and_more.py  0005_remove_projectdocument_owner.py  0006_alter_user_options_alter_comment_id_alter_message_id_and_more.py  0006_projectdocument_name_projectdocument_owner_and_more.py  0007_projectdocument_description.py  (+13 more)
auths/: serializers.py  urls.py  views.py
chat/: consumers.py  routing.py  serializers.py  urls.py  views.py
comments/: serializers.py  urls.py  views.py
core/: asgi.py  celery.py  handle_exception_middleware.py  settings.py  urls.py
firebase/: firebase_config.py
notifications/: FCMManage.py  serializers.py  urls.py  views.py
project_document/: apps.py  serializers.py  urls.py  views.py
projects/: serializers.py  urls.py  views.py
tasks/: serializers.py  urls.py  views.py
user/: serializers.py  urls.py  views.py
utils/: action.py  cloudinary.py  jwt.py  pagination.py  redis.py  response.py  send_mail.py
(+5 files in other folders)
