[tool.poetry]
name = "project-management-api"
version = "0.1.0"
description = "this is api for project management"
authors = ["dntrieu-nguyen <nguyen.dang@rikai.technology>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
mysqlclient = "^2.2.6"
django-guardian = "^2.4.0"
pillow = "^11.0.0"
firebase-admin = "^6.6.0"
django-redis = "^5.4.0"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
drf-yasg = "^1.21.8"
celery = "^5.4.0"
pyjwt = "^2.10.0"
channels = "^4.2.0"
channels-redis = "^4.2.1"
daphne = "^4.1.2"
twisted = {extras = ["http2", "tls"], version = "^24.10.0"}
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
